working implementation of using language code in url
